--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="content">
+        <div class="container">
+            <h1>BlackJack Game</h1>
+            <h2>Want to paly a round ?</h2>
+            <p id="cards">Cards: </p>
+            <p id="sum">Sum: </p>
+            <div class="btns">
+                <button>START GAME</button>
+                <button>NEW CARD</button>
+            </div>
+            <p id="player"></p>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
