--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="content">
         <div class="container">
             <h1>BlackJack Game</h1>
-            <h2>Want to paly a round ?</h2>
+            <h2 id="messageEle">Want to paly a round ?</h2>
             <p id="cards">Cards: </p>
             <p id="sum">Sum: </p>
             <div class="btns">
-                <button>START GAME</button>
+                <button onclick="startGame()">START GAME</button>
                 <button>NEW CARD</button>
             </div>
             <p id="player"></p>
