Add the onclick event to the newCard button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p id="sum">Sum: </p>
             <div class="btns">
                 <button onclick="startGame()">START GAME</button>
-                <button>NEW CARD</button>
+                <button onclick="newCard()">NEW CARD</button>
             </div>
             <p id="player"></p>
         </div>
